update social media links

--- a/WeRateDogs/WeRateDog_Analysis.ipynb
+++ b/WeRateDogs/WeRateDog_Analysis.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "<nav>\n",
-    "<a href=”https://www.google.com\">LinkedIn</a> |\n",
-    "<a href=”/css/”>Github</a> |\n",
-    "<a href=”/js/”>Medium</a> |\n",
+    "<a href=”https://www.linkedin.com/in/ouedraogo-ami-samyra\">LinkedIn</a> |\n",
+    "<a href=”https://github.com/amisamyra99/Udacity-nanodegree-data-analyst-projects”>Github</a> |\n",
+    "<a href=”https://medium.com/@amisamyra.ouedraogo”>Medium</a> |\n",
     "</nav>"
    ]
   },
